mlops/triton/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triton-inference-server
  namespace: triton
  labels:
    app: triton-inference-server
spec:
  selector:
    app: triton-inference-server
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  - name: grpc
    port: 8001
    targetPort: 8001
    protocol: TCP
  - name: metrics
    port: 8002
    targetPort: 8002
    protocol: TCP
  type: ClusterIP
